--- a/source/guide/install.txt
+++ b/source/guide/install.txt
@@ -118,7 +118,7 @@ Windows
       install Quicktime to include Java libraries in your version. The screenshot
       shows just how easy it is! Older versions of Quicktime can be typically installed.
 
-.. figure:: 
+.. figure:: /img/install-quicktime-special.png
    :align: center
    
 You can also use VLC for video playback. If you wish to use VLC, you
