--- a/source/faq.txt
+++ b/source/faq.txt
@@ -187,7 +187,7 @@ You will need to write new scripts for your Datavyu spreadsheets.
 Will my OpenSHAPA scripts run in Datavyu?
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-Yes!u can easily convert an OpenSHAPA script to work in Datavyu
+Yes! You can easily convert an OpenSHAPA script to work in Datavyu
 by adding ``require 'Datavyu_API.rb'`` to the top of your OpenSHAPA
 script file and removing the OpenSHAPA API code that precedes the
 script. For more information see the
