--- a/source/guide/install.txt
+++ b/source/guide/install.txt
@@ -44,7 +44,7 @@ Datavyu supports video playback through Quicktime.
 
 .. note::
 
-      If you are using Quicktime 7.7.5 or later, you will need to simply custom install Quicktime to include Java libraries in your version. The screeshot shows just how easy it is! Older versions of Quicktime can be typically installed.
+      If you are using Quicktime 7.7.5 or later, you will need to simply custom install Quicktime to include Java libraries in your version. The screenshot shows just how easy it is! Older versions of Quicktime can be typically installed.
 
 .. figure:: /img/install-quicktime-special.png
    :align: center
