--- a/source/guide/install.txt
+++ b/source/guide/install.txt
@@ -14,29 +14,27 @@ Requirements
 Hardware Requirements
 ~~~~~~~~~~~~~~~~~~~~~
 
-The hardware requirements listed below are the minimum needed for Datavyu. More RAM,
-a faster processor, or a better graphic card will improve Datavyu’s performance, 
-especially when working with higher-resolution data sources (such as 4K or HD videos).
+These hardware requirements are the minimum needed for Datavyu: 
 
 - 1GB of RAM.
 - 1.2 GHz processor.
-- At least 300 MB of disk space for Datavyu itself
+- At least 300 MB of disk space for Datavyu itself.
+
+More RAM, a faster processor, or a better graphics card will improve Datavyu’s performance, especially when working with higher-resolution data sources (such as 4K or HD videos).
 
 You will also need enough disk space for your videos. We **highly recommend** that you
 use Datavyu on your **local storage device** instead of on an external one (i.e. a server)
-to minimize the lag or freezing issues you might encounter. A keypad, either as part
-of your keyboard, or as an external device, will be needed to easily maneuver the 
-functions of Datavyu.
-
+to minimize any lag or freezing issues. A keypad, either built in to your keyboard, or as an external device, will be needed to control Datavyu.
 
 Software Requirements
 ~~~~~~~~~~~~~~~~~~~~~
 
 Datavyu requires Java 1.6 or higher. Many operating systems include Java by default, 
-but if you are unsure whether or not your computer has Java installed already, 
-go ahead and click the link to install as the installation will override older 
-versions of Java or simply [install] (https://www.java.com/en/download/manual.jsp) Java if you did not have it.
-
+but if you are unsure whether your computer has Java installed already, 
+click the link to install Java if one appears.
+The new installation will override older 
+versions of Java.
+Or, you may [install](https://www.java.com/en/download/manual.jsp) Java from scratch if you do not have it.
 
 Mac OS X 10.6 and below: Apple's Java comes pre-installed with your Mac OS.
 Mac OS X 10.7 (Lion) and above: Java is **not** pre-installed with your Mac OS. 
@@ -45,7 +43,6 @@ Windows 10: Java is pre-installed, however, it may only include the use on brows
 and will require a manual installation to work with Datavyu
 Windows 7: Java is not pre-installed, and will require a manual installation from the website.
  
-
 Datavyu supports video playback through [Quicktime](https://support.apple.com/kb/DL837?locale=en_US). Alternatively, [VLC](https://www.videolan.org/vlc/index.html) will also work 
 as a video playback program for Datavyu.
 
